--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,41 +1,49 @@
 <div mat-subheader>
   <button mat-raised-button color="primary" (click)="addClick()">Add</button>
 </div>
-<table mat-table [dataSource]="employees" class="mat-elevation-z8">
+<mat-table [dataSource]="employees.content" class="mat-elevation-z8">
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let employee">{{ employee.name }}</td>
+    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+    <mat-cell *matCellDef="let employee">{{ employee.name }}</mat-cell>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="phone">
-    <th mat-header-cell *matHeaderCellDef>Phone</th>
-    <td mat-cell *matCellDef="let employee">{{ employee.phone }}</td>
+    <mat-header-cell *matHeaderCellDef>Phone</mat-header-cell>
+    <mat-cell *matCellDef="let employee">{{ employee.phone }}</mat-cell>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="jobTitle">
-    <th mat-header-cell *matHeaderCellDef>JobTitile</th>
-    <td mat-cell *matCellDef="let employee">{{ employee.jobTitle }}</td>
+    <mat-header-cell *matHeaderCellDef>JobTitile</mat-header-cell>
+    <mat-cell *matCellDef="let employee">{{ employee.jobTitle }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let employee">
+    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+    <mat-cell *matCellDef="let employee">
       <button mat-raised-button color="primary" (click)="editClick(employee)">
         Edit
       </button>
-    </td>
+    </mat-cell>
   </ng-container>
   <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let employee">
+    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+    <mat-cell *matCellDef="let employee">
       <button mat-raised-button color="warn" (click)="deleteClick(employee)">
         Delete
       </button>
-    </td>
+    </mat-cell>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+</mat-table>
+
+<mat-paginator [length]="employees.totalElements"
+               [pageSize]="employees.size"
+               [pageSizeOptions]="[5,10]"
+               (page)="onPageChange($event)"
+               >
+</mat-paginator>
